fix: allow large tables to overflow scroll horizontal

--- a/src/styles/blog-post.css
+++ b/src/styles/blog-post.css
@@ -57,12 +57,13 @@
 }
 
 .blog table {
-  width: 100%;
-  margin: var(--space-s);
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
   border-collapse: collapse;
-  margin: 0;
-  font-family: var(--roboto);
   color: var(--white);
+  font-family: var(--roboto);
+  max-width: fit-content;
 }
 
 .blog :is(th, td) {
